--- a/scss/_alignments.scss
+++ b/scss/_alignments.scss
@@ -40,21 +40,21 @@ img.alignright {
 }
 
 @media screen and (min-width: 800px) {
-	.site-main article .entry-title,
+	body .site-main article .entry-title,
 	.wp-caption.alignnone,
 	.alignleft,
 	blockquote.left {
 		margin-left:-7rem;
 	}
-	.site-main article .entry-title {
+	body .site-main article .entry-title {
 		padding-left:7rem;
 	}
 	.site-main article .entry-title,
 	.wp-caption.alignnone,
 	.alignright,
 	blockquote.right,
-	body.single .site-main .entry-title,
-	body.page .site-main .entry-title {
+	body.single .site-main article .entry-title,
+	body.page .site-main article .entry-title {
 		margin-right:-9rem;
 	}
 
@@ -76,40 +76,40 @@ img.alignright {
 
 }
 @media screen and (min-width: 1250px) {
-	.site-main article .entry-title,
+	body .site-main article .entry-title,
 	.wp-caption.alignnone,
 	.alignleft,
 	blockquote.left {
 		margin-left:-14rem;
 	}
-	.site-main article .entry-title {
+	body .site-main article .entry-title {
 		padding-left:14rem;
 	}
-	.site-main article .entry-title,
+	body .site-main article .entry-title,
 	.wp-caption.alignnone,
 	.alignright,
 	blockquote.right,
-	body.single .site-main .entry-title,
-	body.page .site-main .entry-title {
+	body.single .site-main article .entry-title,
+	body.page .site-main article .entry-title {
 		margin-right:-18rem;
 	}
 }
 @media screen and (min-width: 1380px) {
-	.site-main article .entry-title,
+	body .site-main article .entry-title,
 	.wp-caption.alignnone,
 	.alignleft,
 	blockquote.left {
 		margin-left:-20rem;
 	}
-	.site-main article .entry-title {
+	body .site-main article .entry-title {
 		padding-left:20rem;
 	}
-	.site-main article .entry-title,
+	body .site-main article .entry-title,
 	.wp-caption.alignnone,
 	.alignright,
 	blockquote.right,
-	body.single .site-main .entry-title,
-	body.page .site-main .entry-title {
+	body.single .site-main article .entry-title,
+	body.page .site-main article .entry-title {
 		margin-right:-26rem;
 	}
 }
