Introducing Font Awesome to the project.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@
 @import 'typography';
 @import 'elements';
 @import 'forms';
+@import 'icons';
 @import 'layout';
 @import 'navigation';
 @import 'accessibility';
