--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -193,6 +193,7 @@
 
 	.comment {
 		margin-bottom:$lineheight;
+		border-radius:$borderRadius;
 
 		.comment-body {
 			margin-top:0;
@@ -203,12 +204,17 @@
 			float:left;
 			width:$avatarWidth;
 			margin-right:$horizontalBase/2;
+			border-radius:50%;
 		}
 
 		.comment-metadata {
 			font-size:1.5rem;
 			line-height:$lineheight/3*2;
 			margin-bottom:$lineheight/3*1;
+
+			.edit-link {
+				float:right;
+			}
 		}
 
 		.comment-content {
