Now using bower.

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -1,5 +1,5 @@
 @import 'font-awesome-variables';
-@import '../vendor/Font-Awesome/scss/font-awesome';
+@import 'bower_components/fontawesome/scss/font-awesome';
 
 .icon-unspace {
 	margin-right:0.2em;
