--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 1.0 - Reset
+1.5 – Colors
 2.0 - Typography
 3.0 - Elements
 4.0 - Forms
@@ -25,6 +26,7 @@
 --------------------------------------------------------------*/
 
 @import 'reset',
+'colors',
 'typography',
 'elements',
 'forms',
