--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -66,7 +66,7 @@ a:active {
 		margin:0;
 		padding:$flexLayoutPadding;
 
-		background:#eee;
+		background:$lightOverlay;
 
 		transition:all 0.5s;
 
