--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -169,20 +169,15 @@
 
 @media screen and (min-width:800px) {
 	.site-main article {
-		$articleTop: $lineheight*2;
-		margin-top: $articleTop;
-		margin-bottom: $lineheight*5;
+		margin-top: $lineheight*5;
+		margin-bottom: $lineheight*3;
 
-		&:last-child {
-			margin-bottom: $lineheight*3;
+		&:first-child {
+			margin-top: $lineheight*2;
 		}
 
 		.entry-title {
 			font-size:6.6rem;
-		}
-
-		.entry-header figure {
-			margin-top:-$articleTop;
 		}
 	}
 }
