--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -31,6 +31,11 @@
 		@extend .icon-lg;
 	}
 
+	.featured:before {
+		@extend .icon;
+		@extend .icon-star-o;
+		color:yellow;
+	}
 	.cat-links:before {
 		@extend .icon;
 		@extend .icon-folder-open;
