--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -6,7 +6,6 @@
 --------------------------------------------------------------*/
 .sticky {
 	background:rgba(56,232,17,0.25);
-	padding-top:0.1px;
 	padding-bottom:$lineheight/2;
 	border-radius:$borderRadius;
 
@@ -14,6 +13,15 @@
 	padding-left:2rem;
 	margin-right:-2rem;
 	padding-right:2rem;
+
+	.entry-header {
+		margin-top:-$lineheight*3/2;
+		padding-top:$lineheight;
+	}
+	&:before {
+		content:'';
+		display:table;
+	}
 }
 .hentry {
 	margin: 0 0 $lineheight;
@@ -184,6 +192,10 @@
 
 		&:first-child {
 			margin-top: $lineheight*2;
+
+			&.sticky {
+				margin-top: $lineheight;
+			}
 		}
 
 		.entry-title {
