Submit-button and clearfix.

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -17,6 +17,9 @@ input[type="reset"],
 input[type="submit"] {
 	@extend button;
 }
+input[type="submit"] {
+	float:right;
+}
 button {
 	background:$darkOverlay;
 	color:white;
