--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,7 @@
 10.0 - Content
 	10.1 - Posts and pages
 	10.2 - Asides
+	10.3 - Featured images and custom header
 	10.3 - Comments
 11.0 - Infinite scroll
 12.0 - Media
