--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -84,6 +84,8 @@ textarea {
 	color: #666;
 	border: 1px solid #ccc;
 	border-radius: 3px;
+	width:100%;
+	padding:$lineheight/2 $horizontalBase/2;
 }
 input[type="text"]:focus,
 input[type="email"]:focus,
@@ -92,13 +94,6 @@ input[type="password"]:focus,
 input[type="search"]:focus,
 textarea:focus {
 	color: #111;
-}
-input[type="text"],
-input[type="email"],
-input[type="url"],
-input[type="password"],
-input[type="search"] {
-	padding: 3px;
 }
 textarea {
 	overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9 */
