--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,8 @@
 	12.2 - Galleries
 --------------------------------------------------------------*/
 
-@import 'reset',
+@import
+'reset',
 'colors',
 'typography',
 'elements',
