--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -27,10 +27,9 @@ object {
 	display: block;
 	margin: 0 auto;
 }
+.gallery-caption,
 .wp-caption-text {
 	text-align: center;
-}
-.wp-caption .wp-caption-text {
 	margin: $lineheight/2 0;
 }
 
@@ -45,6 +44,7 @@ object {
 	text-align: center;
 	vertical-align: top;
 	width: 100%;
+	margin-bottom:$lineheight;
 }
 .gallery-columns-2 .gallery-item {
 	max-width: 50%;
