--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -34,6 +34,7 @@
 			display:block;
 			width:100%;
 			height:100%;
+			box-sizing:content-box; // Enables 100% + $lineheight width in the border-box sense
 			margin-top:-$lineheight/2;
 			margin-bottom:-$lineheight/2;
 			margin-left:-$horizontalBase/2;
