Forcing normal font-style on lede letter.

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -95,6 +95,7 @@
 		color: $lightTextColor;
 		border-radius: $borderRadius;
 		font-weight: normal;
+		font-style: normal;
 	}
 	.entry-title {
 		padding:$lineheight*1.5 $horizontalBase/2 $lineheight*0.5;
