--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: mek_secret
 Domain Path: /languages/
-Tags: one-column responsive-layout accessibility-ready custom-background custom-header custom-menu featured-image-header featured-images microformats post-formats sticky-post threaded-comments translation-ready
+Tags: one-column, responsive-layout, accessibility-ready, custom-background, custom-header, custom-menu, featured-image-header, featured-images, microformats, post-formats, sticky-post, threaded-comments, translation-ready, black, blue, brown, gray, green, orange, pink, purple, red, silver, tan, white, yellow, dark, light
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
