Smoothing transitions in header image sizes if you resize past a height threshold.

--- a/scss/_featured-images.scss
+++ b/scss/_featured-images.scss
@@ -52,6 +52,7 @@
 	padding:$smallLayoutMargin;
 	padding-top:$lineheight*3;
 	padding-bottom:$lineheight*3;
+	transition:all 0.3s;
 
 	&.header-image {
 		background-size:cover;
