--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,102 +1,102 @@
 /*--------------------------------------------------------------
 4.0 Forms
 --------------------------------------------------------------*/
-#page {
-	button,
-	input,
-	select,
-	textarea {
-		font-size: 100%; /* Corrects font size not being inherited in all browsers */
-		margin: 0; /* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
-		vertical-align: baseline; /* Improves appearance and consistency in all browsers */
-	}
+button,
+input,
+select,
+textarea {
+	font-size: 100%; /* Corrects font size not being inherited in all browsers */
+	margin: 0; /* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
+	vertical-align: baseline; /* Improves appearance and consistency in all browsers */
+}
 
-	.btn,
-	.button,
-	input[type="button"],
-	input[type="reset"],
-	input[type="submit"] {
-		@extend button;
-	}
-	button {
-		background:$darkOverlay;
-		color:white;
-		text-decoration:none;
-		border:none;
+.btn,
+.button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+.nav-previous,
+.nav-next,
+button {
+	background:$darkOverlay;
+	color:white;
+	text-decoration:none;
+	border:none;
+	padding:$lineheight/2 $horizontalBase/2;
+	border-radius:$borderRadius;
+	cursor:pointer;
+
+	a,
+	a:visited,
+	a:hover {
+		color:inherit;
+		text-decoration:inherit;
+		display:block;
+		width:100%;
+		height:100%;
+		box-sizing:content-box; // Enables 100% + $lineheight width in the border-box sense
+		margin-top:-$lineheight/2;
+		margin-bottom:-$lineheight/2;
+		margin-left:-$horizontalBase/2;
+		margin-right:-$horizontalBase/2;
 		padding:$lineheight/2 $horizontalBase/2;
-		border-radius:$borderRadius;
-		cursor:pointer;
-
-		a,
-		a:visited {
-			color:inherit;
-			text-decoration:inherit;
-			display:block;
-			width:100%;
-			height:100%;
-			box-sizing:content-box; // Enables 100% + $lineheight width in the border-box sense
-			margin-top:-$lineheight/2;
-			margin-bottom:-$lineheight/2;
-			margin-left:-$horizontalBase/2;
-			margin-right:-$horizontalBase/2;
-			padding:$lineheight/2 $horizontalBase/2;
-		}
-
-		&[type="submit"] {
-			float:right;
-			background:rgba(70,170,0,1.0);
-		}
 	}
-	button:hover {
+
+	&[type="submit"] {
+		float:right;
+		background:rgba(70,170,0,1.0);
+	}
+
+	&:hover {
 		text-decoration:underline;
 	}
-	button:focus,
-	button:active {
+	&:focus,
+	&:active {
 		border-color: #aaa #bbb #bbb;
 		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
 		position:relative;
 		top:3px;
 	}
+}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		padding: 0; /* Addresses excess padding in IE8/9 */
-	}
-	input[type="search"] {
-		-webkit-appearance: textfield; /* Addresses appearance set to searchfield in S5, Chrome */
-	}
-	input[type="search"]::-webkit-search-decoration { /* Corrects inner padding displayed oddly in S5, Chrome on OSX */
-		-webkit-appearance: none;
-	}
-	button::-moz-focus-inner,
-	input::-moz-focus-inner { /* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
-		border: 0;
-		padding: 0;
-	}
-	input[type="text"],
-	input[type="email"],
-	input[type="url"],
-	input[type="password"],
-	input[type="search"],
-	textarea {
-		color: #666;
-		border: 1px solid #ccc;
-		border-radius: 3px;
-		width:100%;
-		padding:$lineheight/2 $horizontalBase/2;
-	}
-	input[type="text"]:focus,
-	input[type="email"]:focus,
-	input[type="url"]:focus,
-	input[type="password"]:focus,
-	input[type="search"]:focus,
-	textarea:focus {
-		color: #111;
-	}
-	textarea {
-		overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9 */
-		padding-left: 3px;
-		vertical-align: top; /* Improves readability and alignment in all browsers */
-		width: 100%;
-	}
+input[type="checkbox"],
+input[type="radio"] {
+	padding: 0; /* Addresses excess padding in IE8/9 */
+}
+input[type="search"] {
+	-webkit-appearance: textfield; /* Addresses appearance set to searchfield in S5, Chrome */
+}
+input[type="search"]::-webkit-search-decoration { /* Corrects inner padding displayed oddly in S5, Chrome on OSX */
+	-webkit-appearance: none;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner { /* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
+	border: 0;
+	padding: 0;
+}
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+textarea {
+	color: #666;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	width:100%;
+	padding:$lineheight/2 $horizontalBase/2;
+}
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
+textarea:focus {
+	color: #111;
+}
+textarea {
+	overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9 */
+	padding-left: 3px;
+	vertical-align: top; /* Improves readability and alignment in all browsers */
+	width: 100%;
 }
