Making it easier to navigate with multi-level menus.

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -90,7 +90,7 @@ a:active {
 			z-index: 99999;
 
 			list-style:none;
-			margin:0;
+			margin:0 0 0 16.66%;
 
 			li {
 
@@ -116,7 +116,6 @@ a:active {
 			background:#eee;
 
 			ul {
-				margin-left:33%;
 				top:100%;
 				background:#ccc;
 				
