Styling elements in sidebars and widgets.

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -5,3 +5,11 @@ $darkTextColor: #404040;
 $lightTextColor: #fff;
 
 $textColor: $darkTextColor;
+
+$darkLinkColor:hsl(225,73%,57%);
+$darkLinkVisitedColor:hsl(255,26%,36%);
+$darkLinkHoverColor:midnightblue;
+
+$lightLinkColor:hsl(225,26%,90%);
+$lightLinkVisitedColor:hsl(225,26%,80%);
+$lightLinkHoverColor:hsl(225,26%,70%);
