--- a/scss/_featured-images.scss
+++ b/scss/_featured-images.scss
@@ -16,10 +16,10 @@
 				left: 0;
 				right: 0;
 				height: 700px;
-				background: url('http://secrettest.urania.mienko.no/wp-content/uploads/sites/9/2011/01/DSC_2364-bergen.jpg') no-repeat center center;
+				background: no-repeat center center;
+				background-size: cover;
 				z-index: 1;
 				margin-top: -$featuredImageTop;
-				background-size: cover;
 			}
 
 			.entry-title {
@@ -57,8 +57,6 @@
 	&.header-image {
 		background-size:cover;
 		background-position:center center;
-		//min-height:$lineheight*8;
-		//max-height:$lineheight*10;
 		height:$lineheight*10;
 
 		> * {
@@ -82,13 +80,11 @@
 
 @media screen and (min-height: 500px) {
 	.page-header.header-image {
-		//max-height:$lineheight*14;
 		height:$lineheight*14;
 	}
 }
 @media screen and (min-height: 750px) {
 	.page-header.header-image {
-		//max-height:$lineheight*20;
 		height:$lineheight*20;
 	}
 }
@@ -110,7 +106,6 @@
 }
 @media screen and (min-height: 900px) {
 	.page-header.header-image {
-		//max-height:$lineheight*24;
 		height:$lineheight*24;
 	}
 }
