Accounting for really long words in nav menu.

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -85,6 +85,7 @@ a:active {
 		li {
 			position:relative;
 			border-bottom:1px solid white;
+			word-wrap:break-word;
 
 			a {
 				text-decoration: none;
