Adding some README copy.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@ Theme Name: Secret
 Theme URI: http://hemmeligadresse.com/
 Author: Mienko
 Author URI: http://mienko.no/
-Description: Theme for Hemmelig Adresse
+Description: Gridless, one-column theme with large post thumbnails and pulled alignments. Browse the source at <a href="https://github.com/Mienko/mek_secret/">GitHub</a>. Secret is fully responsive, and shines both on small pocket-sized devices and large screen computers. On screen sizes that allow it, it's left and right aligned elements (like pictures or blockquotes) are pulled *off the chart* to make more out of the extra screen real estate without diverting attention to ads, related articles or </em>other stuff</em>. Being gridless means that instead of conforming to a strict horizontal grid, the pages are laid out to make your eyes rest while you read. As in a book, the text is not quite centered, but shifted slightly to one side. Combined with pulling aligned images, this makes for posts with great readability. Even though we jilted the horizontal grid, Secret does try to conform to a <em>vertical</em> grid, also to improve readability. Your readers shouldn't have to worry about these things. Secret does.
 Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -11,15 +11,7 @@ Text Domain: mek_secret
 Domain Path: /languages/
 Tags: one-column, responsive-layout, accessibility-ready, custom-background, custom-header, custom-menu, featured-image-header, featured-images, microformats, post-formats, sticky-post, threaded-comments, translation-ready, black, blue, brown, gray, green, orange, pink, purple, red, silver, tan, white, yellow, dark, light
 
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-mek_secret is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
-
-Resetting and rebuilding styles have been helped along thanks to the fine work of
-Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
-along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
-and Blueprint http://www.blueprintcss.org/
+Secret is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
 */
 
 /*--------------------------------------------------------------
