Taking really long words in narrow widgets into account.

--- a/scss/_widgets.scss
+++ b/scss/_widgets.scss
@@ -5,6 +5,7 @@
 	min-width:225px;
 	margin: $lineheight*3/2 $horizontalBase/2 $lineheight/2;
 	flex:1;
+	word-wrap:break-word;
 
 	h1 {
 		@extend h3;
