--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,7 @@ Secret is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic,
 12.0 - Media
 	12.1 - Captions
 	12.2 - Galleries
+13.0 - Jetpack Compatibility
 --------------------------------------------------------------*/
 
 @import
@@ -58,4 +59,5 @@ Secret is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic,
 'widgets',
 'content',
 'infinite-scroll',
-'media';
+'media',
+'jetpack';
