In footer, adding Github link and Mienko colors.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -57,6 +57,9 @@ body .content-area {
 	padding: $flexLayoutPadding;
 	text-align:center;
 
+	background:#eb540a;
+	color:white;
+
 	.site-info {
 		margin:1.7rem 0;
 	}
