--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -17,6 +17,7 @@ a:active {
 }
 
 // Lighter scheme for footer
+#site-navigation,
 #secondary,
 #colophon {
 	a {
@@ -54,21 +55,28 @@ a:active {
 5.2 Menus
 --------------------------------------------------------------*/
 .main-navigation {
-	clear: both;
 	display: block;
-	float: left;
 	width: 100%;
+	position:fixed;
+	z-index:9;
+	top:0;
+	left:-100%;
+	bottom:0;
+	width:300px;
+	padding:$lineheight 0;
+	overflow:auto;
+	transition:all 0.3s;
+	background:$darkOverlay;
 
-	> * {
-		position:absolute;
-		width:50rem;
-		max-width:100%;
-		top:100%;
-		left:-100%;
-		transition:all 0.3s;
-	}
-	&.toggled > * {
+	&.toggled {
 		left:0;
+	}
+
+	.menu-toggle {
+		position:absolute;
+		right:0;
+		top:0;
+		z-index:2;
 	}
 
 	ul.nav-menu {
@@ -79,7 +87,7 @@ a:active {
 		margin:0;
 		padding:$flexLayoutPadding;
 
-		background:$lightOverlay;
+		//background:$darkOverlay;
 
 		transition:all 0.5s;
 
@@ -143,7 +151,12 @@ a:active {
 				}
 			}
 		}
-		
+	}
+}
+.admin-bar .main-navigation {
+	margin-top:32px;
+	@media screen and (max-width:782px) {
+		margin-top:46px;
 	}
 }
 
